[package]
name                   = "solana-common-core"
description            = "Solana Common Core"
version.workspace      = true
authors.workspace      = true
homepage.workspace     = true
readme.workspace       = true
repository.workspace   = true
license.workspace      = true
edition.workspace      = true
rust-version.workspace = true
categories.workspace   = true
keywords.workspace     = true

[lib]
crate-type = ["cdylib", "lib"]
name       = "solana_common_core"

[features]

[dependencies]
borsh = { workspace = true }

# error handling
anyhow    = { workspace = true }
thiserror = { workspace = true }

# solana
solana-sdk = { workspace = true }

[lints]
workspace = true
