[package]
name                   = "solana-instruction-builder"
description            = "Solana Instruction Builder"
version.workspace      = true
authors.workspace      = true
homepage.workspace     = true
readme.workspace       = true
repository.workspace   = true
license.workspace      = true
edition.workspace      = true
rust-version.workspace = true
categories.workspace   = true
keywords.workspace     = true

[features]

[dependencies]
borsh = { workspace = true }

solana-program      = { workspace = true }
solana-program-pack = { workspace = true }

anchor-trait = { workspace = true }

solana-common-core = { workspace = true }

[lints]
workspace = true
