[package]
name                   = "anchor-instructions-derive"
description            = "Anchor Instructions Derive"
version.workspace      = true
authors.workspace      = true
homepage.workspace     = true
readme.workspace       = true
repository.workspace   = true
license.workspace      = true
edition.workspace      = true
rust-version.workspace = true
categories.workspace   = true
keywords.workspace     = true

[lib]
proc-macro = true

[features]

[dependencies]
syn          = { workspace = true }
quote        = { workspace = true }
proc-macro2  = { workspace = true }
sha2         = { workspace = true }
convert_case = "0.6.0"

[lints]
workspace = true
